<?xml version="1.0" encoding="UTF-8"?>
<project xmlns="http://maven.apache.org/POM/4.0.0"
         xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance"
         xsi:schemaLocation="http://maven.apache.org/POM/4.0.0
                             http://maven.apache.org/xsd/maven-4.0.0.xsd">
    <modelVersion>4.0.0</modelVersion>

    <groupId>com.quickmaster</groupId>
    <artifactId>quickmaster</artifactId>
    <version>1.2.3</version>
    <name>QuickMaster</name>
    <description>
        QuickMaster, an offline audio mastering desktop application (JavaFX).
        Multi-band parametric and dynamic EQ with spectral Auto EQ, automatic
        look-ahead dynamics, saturation and clipping, a true-peak multiband
        limiter, peak normalization and LUFS metering, built on the DSPark
        DSP engine.
    </description>
    <url>https://github.com/CristianMoresi/QuickMaster</url>

    <licenses>
        <license>
            <name>MIT License</name>
            <url>https://opensource.org/licenses/MIT</url>
            <distribution>repo</distribution>
        </license>
    </licenses>

    <developers>
        <developer>
            <name>Cristian Moresi</name>
            <url>https://github.com/CristianMoresi</url>
        </developer>
    </developers>

    <properties>
        <maven.compiler.release>17</maven.compiler.release>
        <project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
        <javafx.version>21.0.11</javafx.version>
        <junit.version>5.10.2</junit.version>
        <jna.version>5.17.0</jna.version>
    </properties>

    <dependencies>
        <!-- DSPark for Java, the audio DSP engine -->
        <dependency>
            <groupId>com.dspark</groupId>
            <artifactId>dspark</artifactId>
            <version>0.1.0</version>
        </dependency>

        <!-- JavaFX UI -->
        <dependency>
            <groupId>org.openjfx</groupId>
            <artifactId>javafx-controls</artifactId>
            <version>${javafx.version}</version>
        </dependency>
        <dependency>
            <groupId>org.openjfx</groupId>
            <artifactId>javafx-fxml</artifactId>
            <version>${javafx.version}</version>
        </dependency>

        <!-- Win32 WM_SIZING constraint. JavaFX itself has no Stage
             aspect-ratio property. -->
        <dependency>
            <groupId>net.java.dev.jna</groupId>
            <artifactId>jna-platform</artifactId>
            <version>${jna.version}</version>
        </dependency>

        <!-- MP3 decoding (read support) -->
        <dependency>
            <groupId>javazoom</groupId>
            <artifactId>jlayer</artifactId>
            <version>1.0.1</version>
        </dependency>
        <dependency>
            <groupId>com.googlecode.soundlibs</groupId>
            <artifactId>mp3spi</artifactId>
            <version>1.9.5.4</version>
        </dependency>

        <!-- MP3 encoding (write support), pure-Java LAME port -->
        <dependency>
            <groupId>de.sciss</groupId>
            <artifactId>jump3r</artifactId>
            <version>1.0.5</version>
        </dependency>

        <!-- JSON configuration -->
        <dependency>
            <groupId>com.google.code.gson</groupId>
            <artifactId>gson</artifactId>
            <version>2.10.1</version>
        </dependency>

        <!-- Testing -->
        <dependency>
            <groupId>org.junit.jupiter</groupId>
            <artifactId>junit-jupiter</artifactId>
            <version>${junit.version}</version>
            <scope>test</scope>
        </dependency>
    </dependencies>

    <build>
        <finalName>quickmaster</finalName>
        <plugins>
            <plugin>
                <groupId>org.apache.maven.plugins</groupId>
                <artifactId>maven-compiler-plugin</artifactId>
                <version>3.13.0</version>
            </plugin>
            <plugin>
                <groupId>org.apache.maven.plugins</groupId>
                <artifactId>maven-surefire-plugin</artifactId>
                <version>3.2.5</version>
            </plugin>
            <plugin>
                <groupId>org.openjfx</groupId>
                <artifactId>javafx-maven-plugin</artifactId>
                <version>0.0.8</version>
                <configuration>
                    <mainClass>com.quickmaster.QuickMasterApp</mainClass>
                </configuration>
            </plugin>
        </plugins>
    </build>
</project>
